--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,5 @@
+@import './styles/styles.scss';
+
 .App {
   text-align: center;
 }
@@ -26,6 +28,10 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.is-active {
+  font-weight: bold;
 }
 
 @keyframes App-logo-spin {
